<resources>
    <string name="_0">0</string>
    <string name="_0_00">0:00</string>
    <string name="_1">1</string>
    <string name="_zero">0</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_settings">About</string>
    <string name="add_program">Add program</string>
    <string name="add_system">Add system</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Tylö Control</string>
    <string name="app_version">App version:</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_sauna_controls">Available sauna controls</string>
    <string name="available_sauna_controls_wifi">Available sauna controls</string>
    <string name="back">Back</string>
    <string name="bath">Bath</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_off">Turn off</string>
    <string name="button_on">Turn on</string>
    <string name="button_standby">Standby</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_connection_status">Cloud connection status</string>
    <string name="colon">:</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="control_panel">Control panel</string>
    <string name="custom">Custom</string>
    <string name="date" />
    <string name="default_web_client_id">72285224213-doav39qlidj3i3evh4lr4f56pt5d5j1t.apps.googleusercontent.com</string>
    <string name="define_zxingandroidembedded" />
    <string name="degree">0</string>
    <string name="degreeUnit">0°</string>
    <string name="delete">Delete</string>
    <string name="delete_fav">Delete favorite</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facility_type">Facility Type:</string>
    <string name="fav">Fav</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://tylohelo-control.firebaseio.com</string>
    <string name="firebase_preference_file_key">com.microsoft.windowsazure.messaging.notificationhubs.FirebasePreferences</string>
    <string name="gcm_defaultSenderId">72285224213</string>
    <string name="general">General</string>
    <string name="google_api_key">AIzaSyABeRQfd1Se_HbfXIAwHh8T5xwVlKErucE</string>
    <string name="google_app_id">1:72285224213:android:50e4be76de2b4f323abd1c</string>
    <string name="google_crash_reporting_api_key">AIzaSyABeRQfd1Se_HbfXIAwHh8T5xwVlKErucE</string>
    <string name="google_storage_bucket">tylohelo-control.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hours">HOURS</string>
    <string name="humidity">Humidity</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="installation_enrichment_file_key">com.microsoft.windowsazure.messaging.notificationhubs.InstallationSharedPreferences</string>
    <string name="item_view_role_description">Tab</string>
    <string name="library_zxingandroidembedded_author">JourneyApps</string>
    <string name="library_zxingandroidembedded_authorWebsite">https://journeyapps.com/</string>
    <string name="library_zxingandroidembedded_isOpenSource">true</string>
    <string name="library_zxingandroidembedded_libraryDescription">Barcode scanning library for Android, using ZXing for decoding.</string>
    <string name="library_zxingandroidembedded_libraryName">ZXing Android Embedded</string>
    <string name="library_zxingandroidembedded_libraryVersion" />
    <string name="library_zxingandroidembedded_libraryWebsite">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="library_zxingandroidembedded_licenseId">apache_2_0</string>
    <string name="library_zxingandroidembedded_repositoryLink">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="license_info">License info</string>
    <string name="lighting">Lighting</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="minus">Minus</string>
    <string name="minus_hour">Minus hour</string>
    <string name="minus_humid">Minus humid</string>
    <string name="minus_min">Minus min</string>
    <string name="minutes">MINUTES</string>
    <string name="name_your_favorite">Name your favorite</string>
    <string name="percent">%</string>
    <string name="plus">Plus</string>
    <string name="plus_hour">Plus hour</string>
    <string name="plus_min">Plus min</string>
    <string name="plus_temp">Plus temp</string>
    <string name="save">Save</string>
    <string name="set_bathTime">Set Bathtime</string>
    <string name="set_humidity">Set Humidity</string>
    <string name="start">Start</string>
    <string name="stop_after">Stop after</string>
    <string name="targetHumidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="title">Title</string>
</resources>