<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editSetBathTimeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="25sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewSetBathTime"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_margin="10dp"
            android:text="@string/set_bathTime"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonClose"
            android:layout_width="90dp"
            android:layout_height="73dp"
            android:contentDescription="@string/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonSave"
            android:layout_width="90dp"
            android:layout_height="73dp"
            android:contentDescription="@string/save"
            android:drawableEnd="@drawable/top_bar_icon_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/buttonIncreaseHour"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/plus_hour"
            android:drawableEnd="@drawable/increase_time"
            android:layout_marginEnd="86dp"
            android:backgroundTint="#434343"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_gravity="center"
            android:id="@+id/buttonIncreaseMin"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/plus_min"
            android:drawableEnd="@drawable/increase_time"
            android:backgroundTint="#434343"
            app:layout_constraintStart_toEndOf="@+id/buttonIncreaseHour"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/white"
            android:id="@+id/textViewHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hours"
            android:layout_marginEnd="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonIncreaseHour"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/white"
            android:id="@+id/textViewMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minutes"
            android:layout_marginStart="35dp"
            app:layout_constraintStart_toEndOf="@+id/textViewHours"
            app:layout_constraintTop_toBottomOf="@+id/buttonIncreaseMin"/>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/textViewHourValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_1"
            android:layout_marginEnd="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHours"/>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/textViewColon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:text="@string/colon"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/textViewHourValue"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/textViewMinutesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/_zero"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/textViewColon"
            app:layout_constraintTop_toBottomOf="@+id/textViewMinutes"/>
        <Button
            android:id="@+id/buttonDecreaseHour"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/minus_hour"
            android:drawableEnd="@drawable/decrease_time"
            android:layout_marginEnd="86dp"
            android:backgroundTint="#434343"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHourValue"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_gravity="center"
            android:id="@+id/buttonDecreaseMin"
            android:layout_width="81dp"
            android:layout_height="77dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/minus_min"
            android:drawableEnd="@drawable/decrease_time"
            android:backgroundTint="#434343"
            app:layout_constraintStart_toEndOf="@+id/buttonDecreaseHour"
            app:layout_constraintTop_toBottomOf="@+id/textViewMinutesValue"
            style="?android:attr/borderlessButtonStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
