<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editFavConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonBackFav"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/back"
            android:drawableStart="@drawable/back_button_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonDeleteFav"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/delete_fav"
            android:drawableEnd="@drawable/delete"
            android:backgroundTint="#434343"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/save"
            android:drawableEnd="@drawable/top_bar_icon_save"
            android:backgroundTint="#434343"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/buttonStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDeleteFav"/>
        <TextView
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/buttonStart"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/buttonStart"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart"/>
        <EditText
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:id="@+id/favNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/name_your_favorite"
            android:inputType="text"
            android:backgroundTint="#434343"
            android:autofillHints="Fav"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"/>
        <TextView
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/favNameText"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/favNameText"
            app:layout_constraintTop_toBottomOf="@+id/favNameText"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonMinusTemp"
            android:layout_width="55dp"
            android:layout_height="0dp"
            android:contentDescription="@string/minus_humid"
            android:layout_marginStart="16dp"
            android:backgroundTint="#434343"
            app:icon="@drawable/stepper_control_minus_btn"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemp"/>
        <TextView
            android:textSize="40sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/textViewTempValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/degree"
            android:textAlignment="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlusTemp"
            app:layout_constraintStart_toEndOf="@+id/buttonMinusTemp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemp"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonPlusTemp"
            android:layout_width="55dp"
            android:layout_height="0dp"
            android:contentDescription="@string/plus_temp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#434343"
            app:icon="@drawable/stepper_control_plus_btn_active"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemp"/>
        <TextView
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewHumid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/buttonPlusTemp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/buttonMinusTemp"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinusTemp"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonMinusHumid"
            android:layout_width="55dp"
            android:layout_height="0dp"
            android:contentDescription="@string/minus"
            android:backgroundTint="#434343"
            app:icon="@drawable/stepper_control_minus_btn"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonMinusTemp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/buttonMinusTemp"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumid"/>
        <TextView
            android:textSize="40sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewHumidValue"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/percent"
            android:textAlignment="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlusHumid"
            app:layout_constraintStart_toEndOf="@+id/buttonMinusHumid"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumid"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonPlusHumid"
            android:layout_width="55dp"
            android:layout_height="0dp"
            android:contentDescription="@string/plus"
            android:backgroundTint="#434343"
            app:icon="@drawable/stepper_control_plus_btn_active"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonPlusTemp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@+id/buttonPlusTemp"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumid"/>
        <Button
            android:id="@+id/buttonStopAfter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_after"
            android:drawableEnd="@drawable/chevron_right"
            android:textAlignment="textStart"
            android:backgroundTint="#434343"
            app:layout_constraintEnd_toEndOf="@+id/buttonPlusTemp"
            app:layout_constraintStart_toStartOf="@+id/buttonMinusTemp"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinusHumid"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:textColor="@color/white"
            android:id="@+id/switchLightning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lighting"
            app:layout_constraintEnd_toEndOf="@+id/buttonStopAfter"
            app:layout_constraintStart_toStartOf="@+id/buttonStopAfter"
            app:layout_constraintTop_toBottomOf="@+id/buttonStopAfter"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
