<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editHumidConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="25sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewSetHumid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/set_humidity"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            app:layout_constraintStart_toEndOf="@+id/buttonClose"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonClose"
            android:layout_width="90dp"
            android:layout_height="73dp"
            android:contentDescription="@string/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonSave"
            android:layout_width="90dp"
            android:layout_height="73dp"
            android:contentDescription="@string/save"
            android:drawableEnd="@drawable/top_bar_icon_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?android:attr/borderlessButtonStyle"/>
        <TextView
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewHumid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/targetHumidity"
            android:textAlignment="textStart"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonClose"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonMinus"
            android:layout_width="55dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/minus"
            android:layout_marginStart="16dp"
            android:backgroundTint="#434343"
            app:icon="@drawable/stepper_control_minus_btn"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumid"/>
        <TextView
            android:textSize="50sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:id="@+id/textViewHumidPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/percent"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@+id/buttonMinus"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumid"/>
        <Button
            android:textSize="30sp"
            android:id="@+id/buttonPlus"
            android:layout_width="55dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/plus"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#434343"
            app:icon="@drawable/stepper_control_plus_btn_active"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumid"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
